assignee header on closing checklist and get task along with respective user.

--- a/angular/src/app/main/checklist/checklist.component.css
+++ b/angular/src/app/main/checklist/checklist.component.css
@@ -209,6 +209,10 @@ button.btn-square{
     border-radius: 4px;
     display: none;
 }
+
+.kt-user-card-v2 {
+    cursor: pointer !important
+}
 .member-count:hover .member-dropdown{
     display: block;
 }
