--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -123,7 +123,7 @@
                                             <option value="1">Monthly</option>
                                             <option value="2">Quarterly</option>
                                             <option value="3">Annually</option>
-                                            <option value="4">XNumberOfMonths</option>
+                                            <option value="4">EveryXNumberOfMonths</option>
                                         </select>
                                     </div>
                                     <div class="form-group ">
@@ -161,8 +161,7 @@
                                     <div class="form-group">
                                         <label>&nbsp;&nbsp;</label>
                                         <select class="bg-white border form-control input-medium"
-                                            (change)="onDaysClick($event.target.value)"
-                                            [(ngModel)]="checklist.dayBeforeAfter">
+                                            (change)="onDaysClick($event.target.value)">
                                             <option [value]="undefined" disabled hidden>Days Before</option>
                                             <option value=true>Days Before</option>
                                             <option value=false>Days After</option>
