--- a/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
+++ b/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
@@ -1,9 +1,8 @@
    <div class="form-group category-selector">
         <label>Category</label>
-        <button type="button" class="btn btn-secondary dropdown-toggle"
-            data-toggle="dropdown" aria-haspopup="true"
+        <button type="button"  data-toggle="dropdown" class="btn btn-secondary dropdown-toggle"
             aria-expanded="false">{{categoryName}}</button>
-        <div class="dropdown-menu" [(ngModel)]="categoryName">
+        <div class="dropdown-menu" [(ngModel)]="categoryName" ngDefaultControl>
             <a class="dropdown-item" *ngFor="let item of categoriesList"
                 (click)="categoryClick(item.value,item.name)">
                 {{item.name}}</a>
@@ -11,3 +10,4 @@
             <a class="dropdown-item" (click)="routeToAddNewCategory()">+AddNew</a>
         </div>
     </div>
+  
