--- a/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.html
+++ b/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.html
@@ -1,4 +1,4 @@
-<div class="kt-container kt-container--fluid kt-grid__item kt-grid__item--fluid">
+<div class="kt-container kt-container--fluid kt-grid__item kt-grid__item--fluid duplicate">
     <div class="row">
         <div class="kt-subheader kt-grid__item">
             <div [class]="containerClass">
