--- a/angular/src/app/main/checklist/edit-task/edit-task.component.css
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.css
@@ -128,3 +128,8 @@ label{
 .DueOn .input-group > label {
     width: 100%;
 }
+::ng-deep .bs-datepicker-head button.current{
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
+}
