--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -38,7 +38,7 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <app-categorie-drop-down></app-categorie-drop-down>
+                                    <app-categorie-drop-down category = {{categoryTitle}}></app-categorie-drop-down>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -79,8 +79,15 @@
                                         <div (click)="commentClick()">
                                             <div class="kt-user-card-v2">
                                                 <div class="kt-user-card-v2__pic">
-                                                    <div class="kt-badge kt-badge--xl kt-badge--primary">
-                                                        {{userSignInName  | firstLetterOfWords}}</div>
+                                                    <div *ngIf="UserProfilePicture" class="kt-badge kt-badge--xl">
+                                                        <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
+                                                            alt="Pic" [src]="UserProfilePicture">
+                                                    </div>
+    
+                                                    <div *ngIf="!UserProfilePicture"
+                                                        class="kt-badge kt-badge--xl kt-badge--primary">
+                                                        {{userName | firstLetterOfWords}}
+                                                    </div>
                                                 </div>
                                                 <div innerHTML="{{checklist.commentBody}}"
                                                     class="form-control create-comments"></div>
