--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -40,7 +40,7 @@
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="form-group">
                                             <form class="">
-                                                <input [(ngModel)]="closingMonthValue" class="form-control" name="date"
+                                                <input [disabled] = disabled  [(ngModel)]="closingMonthValue" class="form-control" name="date"
                                                     bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                                     (onShown)="onOpenCalendar($event)">
                                             </form>
@@ -59,7 +59,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Assignee</label>
-                                        <app-user-list-component comingChangeReguest="" userId={{assigneeId}}>
+                                        <app-user-list-component  comingChangeReguest="" userId={{assigneeId}}>
                                         </app-user-list-component>
                                     </div>
                                 </div>
@@ -110,8 +110,16 @@
                                         <div (click)="commentClick()">
                                             <div class="kt-user-card-v2">
                                                 <div class="kt-user-card-v2__pic">
-                                                    <div class="kt-badge kt-badge--xl kt-badge--warning">
-                                                        {{userSignInName}}
+                                                    <div class="kt-user-card-v2__pic">
+                                                        <div *ngIf="UserProfilePicture" class="kt-badge kt-badge--xl">
+                                                            <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
+                                                                alt="Pic" [src]="UserProfilePicture">
+                                                        </div>
+        
+                                                        <div *ngIf="!UserProfilePicture"
+                                                            class="kt-badge kt-badge--xl kt-badge--primary">
+                                                            {{userSignInName | firstLetterOfWords}}
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div innerHTML="{{checklist.commentBody}}"
@@ -183,7 +191,7 @@
                                                 aria-haspopup="true" aria-expanded="false">
                                                 {{getTaskForEdit.status}}
                                             </button>
-                                            <div class="dropdown-menu drop_down_class"
+                                            <div [disabled] = disabled  class="dropdown-menu drop_down_class"
                                                 aria-labelledby="dropdownMenuButton">
                                                 <a class="dropdown-item" (click)="ChangeStatus(1)">Not Started</a>
                                                 <a class="dropdown-item" (click)="ChangeStatus(2)">In Process</a>
