--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -40,7 +40,7 @@
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="form-group">
                                             <form class="">
-                                                <input [disabled] = disabled  [(ngModel)]="closingMonthValue" class="form-control" name="date"
+                                                <input [(ngModel)]="closingMonthValue" class="form-control" name="date"
                                                     bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                                     (onShown)="onOpenCalendar($event)">
                                             </form>
@@ -191,7 +191,7 @@
                                                 aria-haspopup="true" aria-expanded="false">
                                                 {{getTaskForEdit.status}}
                                             </button>
-                                            <div [disabled] = disabled  class="dropdown-menu drop_down_class"
+                                            <div class="dropdown-menu drop_down_class"
                                                 aria-labelledby="dropdownMenuButton">
                                                 <a class="dropdown-item" (click)="ChangeStatus(1)">Not Started</a>
                                                 <a class="dropdown-item" (click)="ChangeStatus(2)">In Process</a>
