--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -440,3 +440,7 @@ form.task-report-form::after{
 .tenantFooter > span {
     position: static !important;
 }
+
+.headSpace{
+    margin-left: 5px;
+}
