--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="commentmainView show-comments">
                                 <div class="kt-widget3 ">
-                                    <div *ngFor="let i of  (taskDetailObject.comments || [])" class="kt-widget3__item ">
+                                    <div *ngFor="let i of commentsData" class="kt-widget3__item ">
                                         <div class="comments-header kt-widget3__header">
                                             <div class="kt-widget3__user-img">
                                                 <div class="kt-user-card-v2__pic">
