--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -25,7 +25,7 @@
                                         <button type="button" class="btn btn-secondary dropdown-toggle"
                                             data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">{{categoryName}}</button>
-                                        <div class="dropdown-menu" [(ngModel)]="categoryName">
+                                        <div class="dropdown-menu" [(ngModel)]="categoryName" name="categoryName">
                                             <a class="dropdown-item" *ngFor="let item of categoriesList"
                                                 (click)="categoryClick(item.value,item.name)">
                                                 {{item.name}}
