--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -10,12 +10,6 @@
 
             </span>
         </div>
-        <div class="kt-subheader__toolbar">
-            <div class="kt-subheader__wrapper">
-                <button (click)="RedirectToCreateAccount()" class="btn btn-primary"><i class="fa fa-plus"></i>
-                    {{"AddNew" | localize}}</button>
-            </div>
-        </div>
     </div>
 </div>
 
@@ -146,11 +140,11 @@
                                                 Account Type
                                                 <p-sortIcon field="AccountType"></p-sortIcon>
                                             </th>
-                                            <th class="accountSubtype-cell" scope="col">
-                                                Account Sub type
-                                            </th>
                                             <th class="reconciliation-cell" scope="col">
                                                 Reconciliation Type     
+                                            </th>
+                                            <th class="accountSubtype-cell" scope="col">
+                                                Balance
                                             </th>
                                             <th class="assignee-cell" scope="col" pSortableColumn="AssigneeId">
                                                 Assignee
@@ -183,13 +177,13 @@
                                         <td class="accountType-cell">
                                             <span class="category-name bg-lightgrey">{{item.accountType}}</span>
                                         </td>
-                                        <td class="accountSubtype-cell">
-                                            <span class="">{{item.accountSubType}}</span>
-                                        </td>
                                         <td class="reconciliation-cell">
                                             <span class="">{{item.reconciliationType}}</span>
                                         </td>
-
+                                        <td class="accountSubtype-cell">
+                                            <span class=""> $ 111</span>
+                                        </td>
+                                       
                                         <td class="assignee-cell">
                                             <div *ngIf="item.id != rowid" class="kt-user-card-v2"
                                                 (click)="openFieldUpdateAssignee(item.id)">
@@ -216,10 +210,10 @@
                                         <td class="action-cell">
                                             <form class="task-report-form">
                                                 <select onclick="console.log('test')"
-                                                    (change)="ChangeStatus($event.target.value,j.id)"
-                                                    class="form-control border-0 bg-brown text-white">
+                                                    (change)="ChangeStatus($event.target.value,item.id)"
+                                                    class="form-control border-0 {{item.statusBoxColor}} text-white">
                                                     <option value="" selected disabled hidden>
-                                                        Selected Status</option>
+                                                        {{item.statusName}}</option>
                                                     <option value="1">In Process</option>
                                                     <option value="2">Open</option>
                                                     <option value="3">Completed</option>
@@ -234,17 +228,17 @@
                                     <tr *ngIf="collapsibleRow == true && item.id == collapsibleRowId" class="table-row-collapsible "> 
                                         <td>
                                             <ul>
-                                                <li class="accountSubtype-cell collapsable-cell">
-
-                                                    <div class="thead-box"><b>Account Sub Type : </b></div>
-                                                    <div class="tdata-box">
-                                                        <span class="">{{item.accountSubType}}</span>
-                                                    </div>
-                                                </li>
                                                 <li class="reconciliation-cell collapsable-cell">
                                                     <div class="thead-box"><b>Reconciliation : </b></div>
                                                     <div class="tdata-box">
                                                         <span class="">{{item.reconciliationType}}</span>
+                                                    </div>
+                                                </li>
+                                                <li class="accountSubtype-cell collapsable-cell">
+
+                                                    <div class="thead-box"><b>Account Sub Type : </b></div>
+                                                    <div class="tdata-box">
+                                                        <span class=""> $ 111</span>
                                                     </div>
                                                 </li>
                                                 <li  class="assignee-cell collapsable-cell kt-user-card-v2">
@@ -270,15 +264,17 @@
                                                 <li class="action-cell-item collapsable-cell">
                                                     <div class="thead-box"><b>Action : </b></div>
                                                     <form class="task-report-form">
-                                                        <select onclick="console.log('test')"
-                                                            (change)="ChangeStatus($event.target.value,j.id)"
-                                                            class="form-control border-0 bg-brown text-white">
-                                                            <option value="" selected disabled hidden>
-                                                                Selected Status</option>
-                                                            <option value="1">In Process</option>
-                                                            <option value="2">Open</option>
-                                                            <option value="3">Completed</option>
-                                                        </select>
+                                                        <form class="task-report-form">
+                                                            <select onclick="console.log('test')"
+                                                                (change)="ChangeStatus($event.target.value,item.id)"
+                                                                class="form-control border-0 {{item.statusBoxColor}} text-white">
+                                                                <option value="" selected disabled hidden>
+                                                                    {{item.statusName}}</option>
+                                                                <option value="1">In Process</option>
+                                                                <option value="2">Open</option>
+                                                                <option value="3">Completed</option>
+                                                            </select>
+                                                        </form>
                                                     </form>
                                                 </li>
                                             </ul>
